docs: update OpenAPIs docs.
